--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/dwercn">View on GitHub</a>
 
-          <h1 id="project_title">Dwercn.GitHub.io</h1>
+          <h1 id="project_title">dwercn.github.io</h1>
           <h2 id="project_tagline">dwercn.github.io</h2>
 
         </header>
